--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-outside-click-handler": "^1.3.1",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "cookie": "^0.4.2",
@@ -18,6 +19,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-outside-click-handler": "^1.3.0",
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
     "scss": "^0.2.4",
