--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-outside-click-handler": "^1.3.0",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.2",
     "sass": "^1.49.7",
     "scss": "^0.2.4",
     "typescript": "^4.5.5",
